# bag-bookkeeping-app

./: .gitignore  Cargo.toml  PROGRESS.md
.claude/: settings.local.json
crates/ledger-core/: Cargo.toml
crates/ledger-core/migrations/: 0001_initial.sql  0002_license.sql  0003_imported_paid.sql  0004_compliance_ack.sql
crates/ledger-core/src/: auth.rs  backup.rs  compliance.rs  csv_util.rs  db.rs  engine.rs  export_xlsx.rs  ids.rs  import_contacts.rs  import_files.rs  import_open_bills.rs  import_open_invoices.rs  import_products.rs  lib.rs  money.rs  posting.rs  recon.rs  reports.rs  seed.rs
crates/ledger-core/tests/: auth.rs  backup.rs  compliance.rs  engine.rs  export_xlsx.rs  import_contacts.rs  import_open_bills.rs  import_open_invoices.rs  import_products.rs  recon.rs  reports.rs  triggers.rs
docs/legal/: EULA.md
specs/: 00-key-decisions-digest.md  01-data-model-and-posting-engine.md  02-coa-seed-and-setup-wizard.md  03-invoicing-and-payments.md  04-expenses-bills-banking-reconciliation.md  05-statements-and-reports.md  06-excel-import-export.md  07-dashboard-and-modes-ux.md  08-backups.md  09-google-sheets-push.md  10-distribution-and-licensing.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup_shell.rs  lib.rs  main.rs
src-tauri/tests/: lexicon_lint.rs
ui/: index.html
