[package]
name = "ledgerone-desktop"
version.workspace = true
edition.workspace = true
description = "LedgerOne desktop shell — Tauri commands over ledger-core. No SQL lives here; every write goes through the engine (Spec 01 P2)."

[lib]
name = "ledgerone_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ledger-core = { path = "../crates/ledger-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
